updating the notebook

--- a/NLP_C1_W1_lecture_nb_01.ipynb
+++ b/NLP_C1_W1_lecture_nb_01.ipynb
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -573,8 +573,17 @@
       "\u001b[92m\n",
       "My beautiful sunflowers on a sunny Friday morning off :) #sunflowers #favourites #happy #Friday off… https://t.co/3tfYom0N1i\n",
       "\u001b[94m\n",
-      "preprocessed tweet:\n",
-      "['beauti', 'sunflow', 'sunni', 'friday', 'morn', ':)', 'sunflow', 'favourit', 'happi', 'friday', '…']\n"
+      "beauti\n",
+      "sunflow\n",
+      "sunni\n",
+      "friday\n",
+      "morn\n",
+      ":)\n",
+      "sunflow\n",
+      "favourit\n",
+      "happi\n",
+      "friday\n",
+      "…\n"
      ]
     }
    ],
@@ -592,8 +601,10 @@
     "# call the imported function\n",
     "tweets_stem = process_tweet(tweet); # Preprocess a given tweet\n",
     "\n",
-    "print('preprocessed tweet:')\n",
-    "print(tweets_stem) # Print the result"
+    "for x in tweets_stem:\n",
+    "    print(x)\n",
+    "# print('preprocessed tweet:')\n",
+    "# print(tweets_stem) # Print the result"
    ]
   },
   {
